--- a/final/bachelor.html
+++ b/final/bachelor.html
@@ -94,7 +94,7 @@
 
             <!-- Card 3 -->
             <div class="flex-item">
-                <img src="https://placehold.co/300x200" alt="Hostos Digital Design & Animation" class="img-responsive">
+                <img src="images/animation.png" alt="Hostos Digital Design & Animation" class="img-responsive">
                 <p><strong>Hostos Community College</strong><br>
                     The Bachelor’s program builds on foundational courses in design and animation, preparing students for careers in animation, web design, and motion graphics.</p>
                 <button class="degree-btn">B.A.</button>
@@ -104,7 +104,7 @@
 
             <!-- Card 4 -->
             <div class="flex-item">
-                <img src="https://placehold.co/300x200" alt="Game Design" class="img-responsive">
+                <img src="images/Digital-Design-Showcase-cropped.jpg" alt="Game Design" class="img-responsive">
                 <p><strong>Hostos Community College</strong><br>
                     This Bachelor’s degree program in Game Design equips students with the skills needed for professional careers in the entertainment software industry, including game development and publishing.</p>
                 <button class="degree-btn">B.A.</button>
