--- a/final/queens.html
+++ b/final/queens.html
@@ -91,7 +91,7 @@
     
         <!-- Card 3: Queensborough Community College - A.S. Digital Design -->
         <div class="flex-item">
-            <img src="images/qcc.jpg" alt="Queensborough Community College" class="img-responsive">
+            <img src="images/queensborough.png" alt="Queensborough Community College" class="img-responsive">
             <p><strong>Queensborough Community College</strong><br>
                 A.S. Digital Design (Queens) - The A.S. degree program in Digital Art and Design prepares students to enter the greatly expanding field of new media. In addition to four basic courses that provide a solid background in art, students take five courses in digital art and design, which develop computer skills for fine and applied arts.</p>
             <button class="degree-btn">A.S.</button>
