--- a/final/digitaldesign.html
+++ b/final/digitaldesign.html
@@ -75,7 +75,7 @@
         <div class="flex-item">
             <img src="images/bmcc.jpg" alt="Borough of Manhattan Community College" class="img-responsive">
             <p><strong>Borough of Manhattan Community College</strong><br>
-                A.S. Digital Design (Manhattan) - The Multimedia Programming and Design Program prepares students for careers in a variety of multimedia industries, companies, and institutions that develop, produce, or market multimedia products, programs, or services.</p>
+               The Multimedia Programming and Design Program prepares students for careers in a variety of multimedia industries, companies, and institutions that develop, produce, or market multimedia products, programs, or services.</p>
             <button class="degree-btn">A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
@@ -84,25 +84,25 @@
         <div class="flex-item">
             <img src="images/bronx.webp" alt="Bronx Community College" class="img-responsive">
             <p><strong>Bronx Community College</strong><br>
-                A.A.S. Digital Design (Bronx) - This program prepares students for careers in the visual communication industry in positions such as graphic design, web design, computer animation, 3D graphic visualization, motion graphics design, and interactive multimedia design.</p>
+                This program prepares students for careers in the visual communication industry in positions such as graphic design, web design, computer animation, 3D graphic visualization, motion graphics design, and interactive multimedia design.</p>
             <button class="degree-btn">A.A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
     
         <!-- Card 3: Hostos Community College - A.S. Digital Design -->
         <div class="flex-item">
-            <img src="https://placehold.co/300x200" alt="Hostos Community College" class="img-responsive">
+            <img src="images/digitial.jpg" alt="Hostos Community College" class="img-responsive">
             <p><strong>Hostos Community College</strong><br>
-                A.S. Digital Design (Bronx) - The Associate degree in Game Design will provide students with a strong foundation for future occupations in the entertainment software industry. It will provide students with additional career opportunities in the field of entertainment software publishing.</p>
+               The Associate degree in Game Design will provide students with a strong foundation for future occupations in the entertainment software industry. It will provide students with additional career opportunities in the field of entertainment software publishing.</p>
             <button class="degree-btn">A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
     
         <!-- Card 4: Hostos Community College - A.S. Digital Design, Animation -->
         <div class="flex-item">
-            <img src="https://placehold.co/300x200" alt="Hostos Community College" class="img-responsive">
+            <img src="images/animation.png" alt="Hostos Community College" class="img-responsive">
             <p><strong>Hostos Community College</strong><br>
-                A.S. Digital Design, Animation (Bronx) - Through lectures and studio-based classes, the Digital Design and Animation Program provides students with a strong foundation for future occupations in motion graphics, animation, graphic design, and/or web design.</p>
+                Through lectures and studio-based classes, the Digital Design and Animation Program provides students with a strong foundation for future occupations in motion graphics, animation, graphic design, and/or web design.</p>
             <button class="degree-btn">A.S.</button>
             <button class="degree-btn">Digital Design</button>
             <button class="degree-btn">Animation</button>
@@ -121,7 +121,7 @@
         <div class="flex-item">
             <img src="images/laguardia.jpg" alt="LaGuardia Community College" class="img-responsive">
             <p><strong>LaGuardia Community College</strong><br>
-                A.A.S. Digital Design (Queens) - The New Media Technology major offers students the opportunity to work and experiment with some of the exciting technologies available today. Students develop a broad understanding of multimedia and internet technologies in order to create digital content.</p>
+                The New Media Technology major offers students the opportunity to work and experiment with some of the exciting technologies available today. Students develop a broad understanding of multimedia and internet technologies in order to create digital content.</p>
             <button class="degree-btn">A.A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
@@ -130,7 +130,7 @@
         <div class="flex-item">
             <img src="images/queensborough.png" alt="Queensborough Community College" class="img-responsive">
             <p><strong>Queensborough Community College</strong><br>
-                A.S. Digital Design (Queens) - The A.S. degree program in Digital Art and Design prepares students to enter the expanding field of new media. Students take courses that develop computer skills for fine and applied arts, including digital art and design.</p>
+                The A.S. degree program in Digital Art and Design prepares students to enter the expanding field of new media. Students take courses that develop computer skills for fine and applied arts, including digital art and design.</p>
             <button class="degree-btn">A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
@@ -139,7 +139,7 @@
         <div class="flex-item">
             <img src="images/CityTech.jpg" alt="New York City College of Technology" class="img-responsive">
             <p><strong>New York City College of Technology</strong><br>
-                A.A.S. Digital Design (Brooklyn) - The AAS degree program in Communication Design provides students with a solid foundation in the theory and practices of the Communication Design profession and a grounding in general education. Students explore visual expression through a range of courses in drawing, design, and web design.</p>
+                The AAS degree program in Communication Design provides students with a solid foundation in the theory and practices of the Communication Design profession and a grounding in general education. Students explore visual expression through a range of courses in drawing, design, and web design.</p>
             <button class="degree-btn">A.A.S.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
@@ -148,7 +148,7 @@
         <div class="flex-item">
             <img src="images/CityTech.jpg" alt="New York City College of Technology" class="img-responsive">
             <p><strong>New York City College of Technology</strong><br>
-                B.F.A. Digital Design (Brooklyn) - The BFA degree develops students' abilities to frame, research, and solve increasingly complex visual communication problems. Students develop a professional portfolio that prepares them for employment as art directors, graphic designers, illustrators, and web designers.</p>
+                The BFA degree develops students' abilities to frame, research, and solve increasingly complex visual communication problems. Students develop a professional portfolio that prepares them for employment as art directors, graphic designers, illustrators, and web designers.</p>
             <button class="degree-btn">B.F.A.</button>
             <button class="degree-btn">Digital Design</button>
         </div>
