--- a/final/industrialdesign.html
+++ b/final/industrialdesign.html
@@ -70,21 +70,21 @@
     </header>
 
     <div id="wrapper">
-      <<div class="flex-container">
+      <div class="flex-container">
         <!-- Card 1: LaGuardia Community College - A.A.S. Industrial Design -->
         <div class="flex-item">
             <img src="images/laguardia.jpg" alt="LaGuardia Community College" class="img-responsive">
             <p><strong>LaGuardia Community College</strong><br>
-                A.A.S. Industrial Design (Queens) - The Industrial Design program provides students with foundational skills to begin a career in Computer Assisted Design (CAD), Model making, Product Design and Fabrication, or transfer to a four-year institution.</p>
+               The Industrial Design program provides students with foundational skills to begin a career in Computer Assisted Design (CAD), Model making, Product Design and Fabrication, or transfer to a four-year institution.</p>
             <button class="degree-btn">A.A.S.</button>
             <button class="degree-btn">Industrial Design</button>
         </div>
     
         <!-- Card 2: New York City College Of Technology - A.A.S. Industrial Design -->
         <div class="flex-item">
-            <img src="images/nycct.jpg" alt="New York City College of Technology" class="img-responsive">
+            <img src="images/CityTech.jpg" alt="New York City College of Technology" class="img-responsive">
             <p><strong>New York City College of Technology</strong><br>
-                A.A.S. Industrial Design (Brooklyn) - The Industrial Design Technology (IND) program is designed to provide students with a wide variety of skills, enabling them to utilize 2D, 3D, and animation/simulation software packages in several diverse fields.</p>
+               The Industrial Design Technology (IND) program is designed to provide students with a wide variety of skills, enabling them to utilize 2D, 3D, and animation/simulation software packages in several diverse fields.</p>
             <button class="degree-btn">A.A.S.</button>
             <button class="degree-btn">Industrial Design</button>
         </div>
