--- a/final/associate.html
+++ b/final/associate.html
@@ -3,71 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animation Programs</title>
+    <title>Final</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="reset.css">
 </head>
 <body>
-    <header>
-        <!-- Top Navigation -->
-        <nav id="top">
-            <div class="container">
-                <div class="row">
-                    <strong class="logo">CUNY@Design</strong>
-                    <ul class="list-inline top-link">
-                        <li><a href="https://www.cuny.edu/about/">About CUNY</a></li>
-                        <li><a href="https://www.cuny.edu/financial-aid/">Financial Aid</a></li>
-                        <li><a href="#">Apply</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+<header>
+<!--Top-->
+<nav id="top">
+<div class="container">
+<div class="row">
+<strong class="logo">CUNY@Design</strong>
+<ul class="list-inline top-link">
+<li><a href="https://www.cuny.edu/about/">About CUNY</a></li>
+<li><a href="https://www.cuny.edu/financial-aid/">Financial Aid</a></li>
+<li><a href="#">Apply</a></li>
+</ul>
+</div>
+</div>
+ </nav>
 
-        <!-- Main Navigation -->
-        <nav id="menu" class="navbar container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="#">
-                    <div class="logo2">CUNY@FINAL</div>
-                </a>
-                <div id="hamburger-menu" class="hamburger-menu">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </div>
-                <ul class="nav toplist">
-                    <li><a href="index.html">Home</a></li>
-                    <li class="dropdown">
-                        <a href="#">Discipline</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="digitaldesign.html">Digital Design</a></li>
-                            <li><a href="animation.html">Animation</a></li>
-                            <li><a href="industrialdesign.html">Industrial Design</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">Degree</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="associate.html">Associate</a></li>
-                            <li><a href="bachelor.html">Bachelor</a></li>
-                        </ul>
-                    </li>
-                    <li class="dropdown">
-                        <a href="#">Borough</a>
-                        <ul class="dropdown-menu">
-                            <li><a href="brooklyn.html">Brooklyn</a></li>
-                            <li><a href="bronx.html">Bronx</a></li>
-                            <li><a href="manhattan.html">Manhattan</a></li>
-                            <li><a href="queens.html">Queens</a></li>
-                        </ul>
-                    </li>
-                    <li class="search-item">
-                        <input type="text" placeholder="Search here" class="search-input">
-                        <button type="button" class="search-button">Search</button>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-    </header>
+<!-- Main Navigation -->
+<nav id="menu" class="navbar container">
+<div class="navbar-header">
+ <!-- Logo -->
+<a class="navbar-brand" href="#">
+<div class="logo2">CUNY@FINAL</div>
+</a>
+
+<!-- Navigation Links -->
+<div id="hamburger-menu" class="hamburger-menu">
+<span></span>
+<span></span>
+<span></span>
+</div>
+<ul class="nav toplist">
+<li><a href="index.html">Home</a></li>
+<li class="dropdown">
+<a href="#">Discipline</a>
+<ul class="dropdown-menu">
+<li><a href="digitaldesign.html">Digital Design</a></li>
+<li><a href="animation.html">Animation</a></li>
+<li><a href="industrialdesign.html">Industrial Design</a></li>
+</ul>
+</li>
+
+<li class="dropdown">
+<a href="#">Degree</a>
+<ul class="dropdown-menu">
+<li><a href="associate.html">Associate</a></li>
+<li><a href="bachelor.html">Bachelor</a></li>
+</ul>
+</li>
+
+<li class="dropdown">
+<a href="#">Borough</a>
+<ul class="dropdown-menu">
+<li><a href="brooklyn.html">Brooklyn</a></li>
+<li><a href="bronx.html">Bronx</a></li>
+<li><a href="manhattan.html">Manhattan</a></li>
+<li><a href="queens.html">Queens</a></li>
+</ul>
+</li>
+
+<li class="search-item">
+<input type="text" placeholder="Search here" class="search-input">
+<button type="button" class="search-button">Search</button>
+</li>
+</ul>
+</div>
+ </nav>
+
+ </header>
+
 
     <div id="wrapper">
         <div class="flex-container">
@@ -175,13 +183,13 @@
         </div> <!-- closing .flex-container -->
     </div> <!-- closing #wrapper -->
 
-    <footer>
-        <div class="copy">
-            <div class="logo two">
-                <a href="index.html"><h3>Final@Design</h3></a>
-            </div>
-            <p>Copyright &copy; 2024. CUNY.</p>
-        </div>
-    </footer>
+<footer>
+<div class="copy">
+<div class="logo two">
+<a href="index.html"><h3>Final@Design</h3></a>
+</div>
+<p>Copyright &copy; 2024. CUNY.</p>
+</div>
+</footer>
 </body>
 </html>
