--- a/final/bachelor.html
+++ b/final/bachelor.html
@@ -92,9 +92,10 @@
 </div>
 
 <!-- Card 2 -->
+<div class="flex-item">
 <img src="images/bronx.webp" alt="Bronx Community College" class="img-responsive">
 <p><strong>Bronx Community College</strong><br>
-                    The program prepares students for advanced positions in the visual communication industry, including graphic design, web design, computer animation, and interactive multimedia design.</p>
+  The program prepares students for advanced positions in the visual communication industry, including graphic design, web design, computer animation, and interactive multimedia design.</p>
 <button class="degree-btn">B.A.</button>
 <button class="degree-btn">Digital Design</button>
 </div>
