--- a/Jinny/index.html
+++ b/Jinny/index.html
@@ -9,20 +9,15 @@
 </style>
 </head>
 
-<body>
-    <a href="index.html"><button>HOME</button></a>
-	<a href="recipe/recipe.html"><button>RECIPE</button></a>
-   
-       
+<body>       
 <h1> MMP 240 Class Website </h1>
-
+<div class="content-container">
+    <div class="right-content">
+<img src="IMG_8736.JPG " alt="Building Image"> 
 <h2>Jinyi Huang</h2>
+<p>Email: JINYI.HUANG45@STU.BMCC.CUNY.EDU</p>
 
-<p>JINYI.HUANG45@STU.BMCC.CUNY.EDU</p>
-
-
-<p><img src="building450x450.jpg" alt="Building Image">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
+Hello, This is Jinny's Webside for the MMP 240 homework 
 
 <ul>
 <li><a href="recipe.html">Recipe</a></li>
@@ -34,7 +29,7 @@
 <li><a href="exercise7/exercise7.html">Exercise 7</a></li>
 <li><a href="exercise8/exercise8.html">Exercise 8</a></li>
 <li><a href="exercise9/exercise9.html">Exercise 9</a></li>
-<li><a href="exercise9/exercise10.html">Exercise 9</a></li>
+<li><a href="exercise9/exercise10.html">Exercise 10</a></li>
 
 </ul>
 
