--- a/Jinny/index.html
+++ b/Jinny/index.html
@@ -1,38 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Jinny's Website</title>
-<link rel="stylesheet"href=style.css>
-
-</style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Jinyi Huang | Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
+<body>
 
-<body>       
-<h1> MMP 240 Class Website </h1>
-<div class="content-container">
-    <div class="right-content">
-<img src="IMG_8736.JPG " alt="Building Image"> 
-<h2>Jinyi Huang</h2>
-<p>Email: JINYI.HUANG45@STU.BMCC.CUNY.EDU</p>
+  <header class="hero">
+    <h1>Jinyi Huang | Portfolio</h1>
+    <p class="subtitle">Multimedia & Design Student</p>
+    <p>Web Design | 2D & 3D Animation | Game Design</p>
+    <p>Email: <a href="mailto:jinyihuang45@gmail.com">jinyihuang45@gmail.com</a></p>
+    <p><a href="https://www.linkedin.com/in/jinyi-huang-68631026a" target="_blank">LinkedIn</a></p>
+  </header>
 
-Hello, This is Jinny's Webside for the MMP 240 homework 
+  <section class="about-section">
+    <div class="about-container">
+      <div class="about-photo">
+        <img src="002.JPG" alt="My Photo">
+      </div>
+      <div class="about-text">
+        <h2>About Me</h2>
+        <p>I’m a multimedia designer with a passion for animation, game design, and creative storytelling. I enjoy blending traditional and digital tools to bring ideas to life.</p>
+      </div>
+    </div>
+  </section>
+  
 
-<ul>
-<li><a href="recipe.html">Recipe</a></li>
-<li><a href="exercise2/exercise2.html"> Exercise 2 </a></li>
-<li><a href="exercise3/exercise3.html">Exercise 3</a> </li>
-<li><a href="exercise4/exercise4.html">Exercise 4</a></li>
-<li><a href="exercise5/exercise5.html">Exercise 5</a></li>
-<li><a href="exercise6/exercise6.html">Exercise 6</a></li>
-<li><a href="exercise7/exercise7.html">Exercise 7</a></li>
-<li><a href="exercise8/exercise8.html">Exercise 8</a></li>
-<li><a href="exercise9/exercise9.html">Exercise 9</a></li>
-<li><a href="exercise9/exercise10.html">Exercise 10</a></li>
+  <section class="projects">
+    <div class="container">
+      <h2>My Work</h2>
+      <div class="grid">
 
-</ul>
+        <!-- Project 1 -->
+        <div class="card">
+          <img src="Final0000.png" alt="3D Robot Animation">
+          <h3>Robot in Space</h3>
+          <p>3D animation using Cinema 4D</p>
+          <a href="https://your-video-link.com" target="_blank">View Video</a>
+        </div>
 
-    </body>
+        <!-- Project 2 -->
+<div class="card">
+    <img src="01.png" alt="2D Animation">
+    <h3>2D Animation</h3>
+    <p>Created using Adobe Animate, After Effects, and Procreate</p>
+    <a href="https://drive.google.com/file/d/1Xf3x2YSgc8Pkw3xV2reeE1fdBoExvoAz/view?usp=sharing" target="_blank">View Video</a>
+  </div>
+
+        <!-- Project 3 -->
+<div class="card">
+    <img src="city.png" alt="Game Design Thumbnail">
+    <h3>Game Design (Godot)</h3>
+    <p>I designed and built a 3D hybrid platformer using Godot. 
+        All 3D assets—like the character and environment—were modeled in C4D and imported into the engine.
+         I wrote simple GDScript to handle player movement, jumping, and collisions. </p>
+    <a href="https://jinyi-huang.itch.io/gamecity" target="_blank">View Project</a>
+  </div>
+  
+
+
+
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Jinny Huang</p>
+    <p>Email: <a href="mailto:jinyihuang45@gmail.com">jinyihuang45@gmail.com</a></p>
+    <p><a href="https://www.linkedin.com/in/jinyi-huang-68631026a" target="_blank">LinkedIn</a></p>
+  </footer>
+
+</body>
 </html>
-
