--- a/Jinny/index.html
+++ b/Jinny/index.html
@@ -10,7 +10,7 @@
 
   <header class="hero">
     <h1>Jinyi Huang | Portfolio</h1>
-    <p class="subtitle">Multimedia & Design Student</p>
+    <p class="subtitle">Multimedia & Design </p>
     <p>Web Design | 2D & 3D Animation | Game Design</p>
     <p>Email: <a href="mailto:jinyihuang45@gmail.com">jinyihuang45@gmail.com</a></p>
     <p><a href="https://www.linkedin.com/in/jinyi-huang-68631026a" target="_blank">LinkedIn</a></p>
@@ -39,7 +39,7 @@
           <img src="Final0000.png" alt="3D Robot Animation">
           <h3>Robot in Space</h3>
           <p>3D animation using Cinema 4D</p>
-          <a href="https://your-video-link.com" target="_blank">View Video</a>
+          <a href="https://drive.google.com/file/d/1u9PqtA3LSTC5daeacAzJGpRGh9icYFcf/view?usp=sharing" target="_blank">View Video</a>
         </div>
 
         <!-- Project 2 -->
