--- a/Jinny/index.html
+++ b/Jinny/index.html
@@ -12,7 +12,7 @@
     <h1>Jinyi Huang | Portfolio</h1>
     <p class="subtitle">Multimedia & Design </p>
     <p>Web Design | 2D & 3D Animation | Game Design</p>
-    <p>Email: <a href="mailto:jy15435472761@gmail.com">jinyihuang45@gmail.com</a></p>
+    <p>Email: <a href="mailto:jy15435472761@gmail.com">jy15435472761@gmail.com</a></p>
     <p><a href="https://www.linkedin.com/in/jinyi-huang-68631026a" target="_blank">LinkedIn</a></p>
   </header>
 
